chore(style): Make sure the popup content visible

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,3 +9,5 @@ $font-weight-bold: bold;
 // overlay
 $overlay-background-color: rgb(0 0 0 / 70%);
 $overlay-content-background-color: #FFF;
+$popup-header-height: 8rem;
+$popup-footer-height: 13.6rem;
